# fir1

./: AUTHORS  AudioFile_8h.html  AudioFile_8h_source.html  CMakeLists.txt  Doxyfile  Fir1_8h_source.html  Fir1fixed_8h_source.html  README.md  SignalCleaner.cpp  SignalCleaner.h  SignalCleaner_8h_source.html  SingalCleaner.cpp  SingalCleaner.h  annotated.html  classAudioFile-members.html  classAudioFile.html  classFir1-members.html  classFir1.html  classFir1fixed-members.html  classFir1fixed.html  classSignalCleaner-members.html  classSignalCleaner.html  classes.html  correlate_8h_source.html  dir_00da5bde0de248305ef8d7dff783616e.html  dir_26a1eb4fafabbb634933bccc119101de.html  dir_6d53ec2911c2c7d76e5f162b25f055ee.html  experiment1.sh  files.html  filter.sh  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  index.html  main.cpp  md_AudioFile_README.html  md_README.html  md_SignalCleaner_README.html  (+3 more)
AudioFile/: AudioFile.h
SignalCleaner/: CMakeLists.txt  Filter.cpp  Filter.h  README.md  SignalCleaner.cpp  SignalCleaner.h  main.cpp
correlate/: CMakeLists.txt  Makefile  README.md  correlate.cpp  correlate.h  main.cpp
demo/: CMakeLists.txt  lmsdemo.cpp  setup.sh  wavdemo.cpp  wavrw.c  wavrw.h
pdf/: AudioFile_8h.tex  AudioFile_8h_source.tex  Fir1_8h_source.tex  Fir1fixed_8h_source.tex  SignalCleaner_8h_source.tex  annotated.tex  classAudioFile.tex  classFir1.tex  classFir1fixed.tex  classSignalCleaner.tex  correlate_8h_source.tex  files.tex  md_AudioFile_README.tex  md_README.tex  md_SignalCleaner_README.tex  refman.tex  (+1 more)
(+37 files in other folders)
